Document Digdir's scopes in the OpenAPI spec
